<resources>
    <string name="app_name">InventoryIncidencias</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tvAppName">Hola caracola</string>
    <string name="tvLogin">Login</string>
    <string name="tilNombreUsuario">Nombre de usuario:</string>
    <string name="tilContrasena">Contraseña: </string>
    <string name="btnRegistrar">REGISTRAR</string>
    <string name="btnLogin">LOGIN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvTitleSignUp">Sign Up</string>
    <string name="tilUsuario">Introduce un nombre de usuario:</string>
    <string name="tilEmail">Introduce un email:</string>
    <string name="tilPassword">Introduce una contraseña:</string>
    <string name="tilConfirmPassword">Introduce de nuevo la contraseña:</string>
    <string name="chbTerms">Acepto los términos</string>
    <string name="chbSubscription">Acepto que me envien emails de información</string>
    <string name="signup_fragment_label">SignUp Fragment</string>
    <string name="fab">Botón OK</string>
    <string name="splash_fragment_label">Splash Fragment</string>
    <string name="login_fragment_label">Login Fragment</string>
    <string name="action_dashboard">Botón de acción Dashboard</string>
    <string name="dashboard_fragment_label">Dashboard Fragment</string>
    <string name="tvCreated">Fecha de creación:</string>
    <string name="tvActivated">Fecha de activación:</string>
    <string name="tvEnded">Fecha de finalización:</string>
    <string name="tvEdit">Edición</string>
    <string name="errorPasswordFormat">Formato incorrecto de la contraseña</string>
    <string name="tvCreateDependency">Crear dependencia</string>
    <string name="tilCreateDependencyName">Nombre de la nueva dependencia</string>
    <string name="tilCreateDependencyShortName">Nombre corto de la nueva dependencia</string>
    <string name="btnCreateDependency">CREAR DEPENDENCIA</string>
    <string name="tilCreateDependencyDescription">Descripción de la nueva dependencia</string>
    <string name="tilCreateDependencyImage">Imagen de la nueva dependencia</string>
    <string name="title_delete_dependency">Eliminar dependencia</string>
    <string name="message_delete">¿Quiere eliminar el elemento %1$s?</string>
    <string name="undo">Deshacer</string>
    <string name="action_dependency_orderById">Ordenar por Id</string>
    <string name="action_logout">Cerrar sesión cuenta</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_account">Cuenta</string>
    <string name="summary_account">Notificaciones de seguridad, cambiar número</string>
    <string name="key_account">account</string>
    <string name="key_email">email</string>
    <string name="key_password">password</string>
    <string name="title_password">Password</string>
    <string name="title_email">Email</string>
    <string name="header_account">Información de la cuenta</string>
    <string name="header_help">Opciones de ayuda</string>
    <string name="title_help_center">Centro de ayuda</string>
    <string name="key_help_center">help_center</string>
    <string name="title_privacy_condition">Política de privacidad</string>
    <string name="key_privacy_condition">privacy_condition</string>
    <string name="key_active_notification">active_notification</string>
    <string name="header_notification">Notificaciones</string>
    <string name="title_active_notification">Notificaciones activadas</string>
    <string name="title_rigntone">Tonos de notificaciones</string>
    <string name="key_ringtone">ringtone</string>
    <string name="channel_description">Canal general para las notificaciones de la aplicación Inventory</string>
    <string name="channel_name">Channel Inventory Incidencias</string>
    <string name="notify_add_dependency">Se ha añadido una dependencia</string>
</resources>