<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/SplashFragment">

    <fragment
        android:id="@+id/SplashFragment"
        android:name="com.example.inventoryincidencias.SplashFragment"
        android:label="@string/splash_fragment_label"
        tools:layout="@layout/fragment_splash">

        <action
            android:id="@+id/action_SplashFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />
    </fragment>
    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.example.inventoryincidencias.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_LoginFragment_to_SignUpFragment"
            app:destination="@id/SignUpFragment" />
        <action
            android:id="@+id/action_LoginFragment_to_DashBoardFragment"
            app:destination="@id/dashBoardFragment" />
    </fragment>

    <fragment
        android:id="@+id/SignUpFragment"
        android:name="com.example.inventoryincidencias.SignUpFragment"
        android:label="@string/signup_fragment_label"
        tools:layout="@layout/fragment_sign_up">
    </fragment>
    <fragment
        android:id="@+id/dashBoardFragment"
        android:name="com.example.inventoryincidencias.DashBoardFragment"
        android:label="@string/dashboard_fragment_label"
        tools:layout="@layout/fragment_dash_board" >
        <action
            android:id="@+id/action_dashBoardFragment_to_settingInventoryFragment"
            app:destination="@id/settingInventoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingInventoryFragment"
        android:name="com.example.inventoryincidencias.SettingInventoryFragment"
        android:label="fragment_setting_inventory"
        tools:layout="@layout/fragment_setting_inventory" />
</navigation>