<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="dependency"
            type="com.example.inventoryincidencias.data.model.Dependency"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.CreateDependencyFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/create_food_fragment_guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/create_food_fragment_guideline" />

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ramadhan"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/create_food_fragment_text_view_title_text_size"
            app:layout_constraintEnd_toStartOf="@+id/glEnd"
            app:layout_constraintStart_toStartOf="@+id/glStart"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCreateDependencyName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/glEnd"
            app:layout_constraintStart_toStartOf="@+id/glStart"
            app:layout_constraintTop_toBottomOf="@+id/tvTitulo"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tilCreateDependencyName"
                android:text="@{dependency.name}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCreateDependencyShortName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/glEnd"
            app:layout_constraintStart_toStartOf="@+id/glStart"
            app:layout_constraintTop_toBottomOf="@+id/tilCreateDependencyName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tilCreateDependencyShortName"
                android:text="@{dependency.shortName}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCreateDependencyDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/glEnd"
            app:layout_constraintStart_toStartOf="@+id/glStart"
            app:layout_constraintTop_toBottomOf="@+id/tilCreateDependencyShortName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tilCreateDependencyDescription"
                android:text="@{dependency.description}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCreateDependencyImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/glEnd"
            app:layout_constraintStart_toStartOf="@+id/glStart"
            app:layout_constraintTop_toBottomOf="@+id/tilCreateDependencyDescription">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tilCreateDependencyImage"
                android:text="@{dependency.imageName}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnCreateDependency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btnCreateDependency"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilCreateDependencyImage" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>