<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingInventoryFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSettingInventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:tint="@android:color/white"
        app:elevation="6dp"
        android:src="@drawable/ic_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/imbCreateCalendar"
        android:layout_width="@dimen/imgCalendar"
        android:layout_height="@dimen/imgCalendar"
        android:scaleType="centerCrop"
        android:src="@drawable/calendario"
        app:layout_constraintBottom_toBottomOf="@+id/editTextDate5"
        app:layout_constraintEnd_toStartOf="@+id/glEndSettingInventory"
        app:layout_constraintTop_toTopOf="@+id/etFechaCreacion" />

    <ImageButton
        android:id="@+id/imbCalendar3"
        android:layout_width="@dimen/imgCalendar"
        android:layout_height="@dimen/imgCalendar"
        android:scaleType="centerCrop"
        android:src="@drawable/calendario"
        app:layout_constraintBottom_toBottomOf="@+id/editTextDate2"
        app:layout_constraintEnd_toStartOf="@+id/glEndSettingInventory"
        app:layout_constraintTop_toTopOf="@+id/editTextDate2" />

    <ImageButton
        android:id="@+id/imbCalendar2"
        android:layout_width="@dimen/imgCalendar"
        android:layout_height="@dimen/imgCalendar"
        android:scaleType="centerCrop"
        android:src="@drawable/calendario"
        app:layout_constraintBottom_toBottomOf="@+id/editTextDate3"
        app:layout_constraintEnd_toStartOf="@+id/glEndSettingInventory"
        app:layout_constraintTop_toTopOf="@+id/editTextDate3" />

    <EditText
        android:id="@+id/etFechaCreacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvCreated"
        app:layout_constraintEnd_toStartOf="@+id/imbCreateCalendar"
        app:layout_constraintStart_toEndOf="@+id/barrier" />

    <EditText
        android:id="@+id/editTextDate3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvEnded"
        app:layout_constraintEnd_toStartOf="@+id/imbCalendar2"
        app:layout_constraintStart_toEndOf="@+id/barrier" />

    <EditText
        android:id="@+id/editTextDate2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvActivated"
        app:layout_constraintEnd_toStartOf="@+id/imbCalendar3"
        app:layout_constraintStart_toEndOf="@+id/barrier" />

    <TextView
        android:id="@+id/tvTitleSettingInventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStartSettingInventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="10dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEndSettingInventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <TextView
        android:id="@+id/tvCreated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/tvCreated"
        app:layout_constraintStart_toStartOf="@+id/glStartSettingInventory"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleSettingInventory" />

    <TextView
        android:id="@+id/tvActivated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/tvActivated"
        app:layout_constraintStart_toStartOf="@+id/glStartSettingInventory"
        app:layout_constraintTop_toBottomOf="@+id/tvCreated" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="tvCreated,tvActivated,tvEnded,tvEdit"
        tools:layout_editor_absoluteX="107dp" />

    <TextView
        android:id="@+id/tvEnded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/tvEnded"
        app:layout_constraintStart_toStartOf="@+id/glStartSettingInventory"
        app:layout_constraintTop_toBottomOf="@+id/tvActivated" />

    <TextView
        android:id="@+id/tvEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/tvEdit"
        app:layout_constraintStart_toStartOf="@+id/glStartSettingInventory"
        app:layout_constraintTop_toBottomOf="@+id/tvEnded" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvEdit"
        app:layout_constraintEnd_toStartOf="@+id/glEndSettingInventory"
        app:layout_constraintHorizontal_bias="0.963"
        app:layout_constraintStart_toEndOf="@+id/barrier" />

</androidx.constraintlayout.widget.ConstraintLayout>